--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「世界上只有一种英雄主义——那就是看清生活的真相后，依然热爱它」"
+description: "「离开世界之前 一切都是过程」"
 ---
 
 {% for post in paginator.posts %}
